[package]
name = "lbl-tg-rcore-tutorial-ch1-clock"
description = "Chapter 1 of rCore Tutorial: A minimal bare-metal application running in RISC-V S-mode."
version = "0.0.1-preview.1"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>","Yifan Wang<w-yf22@mails.tsinghua.edu.cn>","Yu Chen <yuchen@tsinghua.edu.cn>"]
repository = "https://github.com/waterrop/tg-rcore-tutorial-ch1-clock#"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "bare-metal", "ai", "ai4ose", "kernel", "learning", "os"]
categories = ["no-std", "embedded"]
build = "build.rs"

[[bin]]
name = "tg-rcore-tutorial-ch1-clock"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tg-sbi = { package = "tg-rcore-tutorial-sbi", version = "0.4.8" }
